--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ownergadcuenca",
+  "name": "owner-gad-cuenca",
   "version": "1.0.0",
   "description": "validaciones enlinea",
   "main": "index.js",
